syntax = "proto3";

package virtengine.oracle.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/oracle/v1";

// DataID uniquely identifies a price pair by asset and base denomination
message DataID {
  // denom is the asset denomination (e.g., "uve")
  string denom = 1 [
    (gogoproto.jsontag) = "denom",
    (gogoproto.moretags) = "yaml:\"denom\""
  ];

  // base_denom is the base denomination for the price pair (e.g., "usd")
  string base_denom = 2 [
    (gogoproto.jsontag) = "base_denom",
    (gogoproto.moretags) = "yaml:\"base_denom\""
  ];
}

// PriceDataID identifies price data from a specific source for a specific pair
message PriceDataID {
  // source is the index of the price source (oracle provider)
  uint32 source = 1 [
    (gogoproto.jsontag) = "source",
    (gogoproto.moretags) = "yaml:\"source\""
  ];
  // denom is the asset denomination
  string denom = 2 [
    (gogoproto.jsontag) = "denom",
    (gogoproto.moretags) = "yaml:\"denom\""
  ];

  // base_denom is the base denomination for the price pair
  string base_denom = 3 [
    (gogoproto.jsontag) = "base_denom",
    (gogoproto.moretags) = "yaml:\"base_denom\""
  ];
}

// PriceDataRecordID represents a price from a specific source at a specific time.
// It also represents a single data point in TWAP history
message PriceDataRecordID {
  // source is the index of the price source (oracle provider)
  uint32 source = 1 [
    (gogoproto.jsontag) = "source",
    (gogoproto.moretags) = "yaml:\"source\""
  ];
  // denom is the asset denomination
  string denom = 2 [
    (gogoproto.jsontag) = "denom",
    (gogoproto.moretags) = "yaml:\"denom\""
  ];

  // base_denom is the base denomination for the price pair
  string base_denom = 3 [
    (gogoproto.jsontag) = "base_denom",
    (gogoproto.moretags) = "yaml:\"base_denom\""
  ];

  // height is the block height when this price was recorded
  int64 height = 4 [
    (gogoproto.jsontag) = "height",
    (gogoproto.moretags) = "yaml:\"height\""
  ];
}

// PriceDataState represents the price value and timestamp for a price entry
message PriceDataState {
  // price is the decimal price value
  string price = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"price\"",
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (amino.dont_omitempty) = true
  ];

  // timestamp is when the price was recorded
  google.protobuf.Timestamp timestamp = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.customname) = "Timestamp",
    (gogoproto.jsontag) = "timestamp",
    (gogoproto.moretags) = "yaml:\"timestamp\""
  ];
}

// PriceData combines a price record identifier with its state
message PriceData {
  // id uniquely identifies this price record
  PriceDataRecordID id = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag) = "id",
    (gogoproto.moretags) = "yaml:\"id\""
  ];

  // state contains the price value and timestamp
  PriceDataState state = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "state",
    (gogoproto.moretags) = "yaml:\"state\""
  ];
}

// AggregatedPrice represents the final aggregated price from all sources
message AggregatedPrice {
  // denom is the asset denomination
  string denom = 1 [
    (gogoproto.jsontag) = "denom",
    (gogoproto.moretags) = "yaml:\"denom\""
  ];

  // twap is the time-weighted average price over the configured window
  string twap = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.customname) = "TWAP",
    (gogoproto.moretags) = "yaml:\"twap\"",
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (amino.dont_omitempty) = true
  ];

  // median_price is the median of all source prices
  string median_price = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"median_price\"",
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (amino.dont_omitempty) = true
  ];

  // min_price is the minimum price from all sources
  string min_price = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"min_price\"",
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (amino.dont_omitempty) = true
  ];

  // max_price is the maximum price from all sources
  string max_price = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"max_price\"",
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (amino.dont_omitempty) = true
  ];

  // timestamp is when the aggregated price was computed
  google.protobuf.Timestamp timestamp = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.customname) = "Timestamp",
    (gogoproto.jsontag) = "timestamp",
    (gogoproto.moretags) = "yaml:\"timestamp\""
  ];

  // num_sources is the number of price sources contributing to this aggregation
  uint32 num_sources = 7 [
    (gogoproto.jsontag) = "num_sources",
    (gogoproto.moretags) = "yaml:\"num_sources\""
  ];

  // deviation_bps is the price deviation in basis points between min and max prices
  uint64 deviation_bps = 8 [
    (gogoproto.jsontag) = "deviation_bps",
    (gogoproto.moretags) = "yaml:\"deviation_bps\""
  ];
}

// PriceHealth represents the health status of a price feed
message PriceHealth {
  // denom is the asset denomination
  string denom = 1 [
    (gogoproto.jsontag) = "denom",
    (gogoproto.moretags) = "yaml:\"denom\""
  ];

  reserved 2;

  // is_healthy indicates if the price feed meets all health requirements
  bool is_healthy = 3;
  // has_min_sources indicates if minimum number of sources are reporting
  bool has_min_sources = 4;
  // deviation_ok indicates if price deviation is within acceptable limits
  bool deviation_ok = 5;
  // total_sources indicates total amount of sources registered for price calculations
  uint32 total_sources = 6;
  // total_healthy_sources indicates total usable sources for price calculations
  uint32 total_healthy_sources = 7;
  // failure_reason lists reasons for unhealthy status, if any
  repeated string failure_reason = 8;
}

// PricesFilter defines filters used to query price data
message PricesFilter {
  option (gogoproto.equal) = false;

  // asset_denom is the asset denomination to filter by
  string asset_denom = 1 [
    (gogoproto.jsontag) = "asset_denom",
    (gogoproto.moretags) = "yaml:\"asset_denom\""
  ];

  // base_denom is the base denomination to filter by
  string base_denom = 2 [
    (gogoproto.jsontag) = "base_denom",
    (gogoproto.moretags) = "yaml:\"base_denom\""
  ];

  // height is the block height to filter by
  int64 height = 3 [
    (gogoproto.jsontag) = "height",
    (gogoproto.moretags) = "yaml:\"height\""
  ];
}

// QueryPricesRequest is the request type for querying price history
message QueryPricesRequest {
  // filters holds the price fields to filter the request
  PricesFilter filters = 1 [(gogoproto.nullable) = false];

  // pagination is used to paginate the request
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryPricesResponse is the response type for querying price history
message QueryPricesResponse {
  // prices is the list of historical price data matching the filters
  repeated PriceData prices = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "prices",
    (gogoproto.moretags) = "yaml:\"prices\""
  ];

  // pagination contains the information about response pagination
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
